# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml
backend/src/lms_backend/routers/: items.py
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_observability/: __main__.py  server.py  settings.py
nanobot/: Dockerfile  config-local.json  config.json  entrypoint.py  main.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
